Productos OK Clientes OK Login OK Inicio OK

--- a/src/TPV_Moviles/Modulos/GestionClientes/GestionCli/Vista/ModificarCli.form
+++ b/src/TPV_Moviles/Modulos/GestionClientes/GestionCli/Vista/ModificarCli.form
@@ -356,9 +356,9 @@
                     </Constraint>
                   </Constraints>
                 </Component>
-                <Component class="javax.swing.JButton" name="btnVolverPro">
+                <Component class="javax.swing.JButton" name="btnVolverMenu">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="Ir Pager Pro"/>
+                    <Property name="text" type="java.lang.String" value="Ir al Menu "/>
                     <Property name="opaque" type="boolean" value="false"/>
                   </Properties>
                   <AuxValues>
@@ -399,7 +399,7 @@
                   </AuxValues>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="568" y="31" width="116" height="112"/>
+                      <AbsoluteConstraints x="568" y="31" width="100" height="112"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -413,7 +413,7 @@
                   </AuxValues>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="570" y="150" width="116" height="-1"/>
+                      <AbsoluteConstraints x="570" y="150" width="90" height="-1"/>
                     </Constraint>
                   </Constraints>
                 </Component>
