--- a/src/TPV_Moviles/Modulos/GestionProductos/Vista/ModificarPro.form
+++ b/src/TPV_Moviles/Modulos/GestionProductos/Vista/ModificarPro.form
@@ -309,7 +309,7 @@
                   </AuxValues>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="413" y="49" width="100" height="100"/>
+                      <AbsoluteConstraints x="413" y="69" width="100" height="80"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -354,6 +354,9 @@
                   </Constraints>
                 </Component>
                 <Component class="com.toedter.calendar.JDateChooser" name="dcFmercado">
+                  <Properties>
+                    <Property name="dateFormatString" type="java.lang.String" value="dd-MM-yyyy"/>
+                  </Properties>
                   <AuxValues>
                     <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
                   </AuxValues>
