--- a/src/TPV_Moviles/Modulos/GestionProductos/Vista/Ventana_Prod.form
+++ b/src/TPV_Moviles/Modulos/GestionProductos/Vista/Ventana_Prod.form
@@ -598,7 +598,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="0" green="c8" id="orange" palette="1" red="ff" type="palette"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Filtra por Refencia:"/>
+            <Property name="text" type="java.lang.String" value="Filtra por Marca:"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
