Se ha añadido Sobre Nosotros. Todo OK, version Final.

--- a/src/TPV_Moviles/Modulos/Inicio/Vista/Ventana_Inicio.form
+++ b/src/TPV_Moviles/Modulos/Inicio/Vista/Ventana_Inicio.form
@@ -286,6 +286,30 @@
             </MenuItem>
           </SubComponents>
         </Menu>
+        <Menu class="javax.swing.JMenu" name="menuSobre">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/TPV_Moviles/Img/sobrenosotros.png"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Sobre Nosotros"/>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="menuAqui">
+              <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/TPV_Moviles/Img/aqui.png"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Pulsa aqui"/>
+              </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+              </AuxValues>
+            </MenuItem>
+          </SubComponents>
+        </Menu>
       </SubComponents>
     </Menu>
   </NonVisualComponents>
